Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14391

netstat utility from 2k3sp2 missing iphlpapi func AllocateAndGetTcpExTable2FromStack

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.11
    • None
    • None

    Description

      0.4.8-RC-16-gaf545fe gcc dbg

      I tried the netstat utility of 2k3sp2 (since ours does not work yet).
      I copied it together with required dlls xpsp2res.dll and w03a2409.dll

      When I type "netstat -abn"
      it crashes, because it can't find a function in our iphlpapi:

      WARNING: calling stub AllocateAndGetTcpExTable2FromStack()
      (../dll/win32/kernel32/client/except.c:736) Missing function in   : iphlpapi.dll
      (../dll/win32/kernel32/client/except.c:737) with the functionname : AllocateAndGetTcpExTable2FromStack
      Unhandled exception
      ExceptionCode:    80000100
      CS:EIP 1b:7c7168dd
      DS 23 ES 23 FS 38 GS 0
      EAX: 0006fc78   EBX: 80000100   ECX: 0006fa04
      EDX: 00000000   EBP: 0006fcd0   ESI: 00000001   ESP: 0006fc6c
      EDI: 7c211435   EFLAGS: 00000246
      Address:
      <kernel32.dll:68dd> (C:\ReactOS\system32\kernel32.dll@7c710000)
      Frames:
      <iphlpapi.dll:b040> (C:\ReactOS\System32\iphlpapi.dll@7c260000)
      <netstat.exe:30ad> (C:\netstat.exe@1000000)
      <netstat.exe:37bf> (C:\netstat.exe@1000000)
      <netstat.exe:3ae5> (C:\netstat.exe@1000000)
      <kernel32.dll:10947> (C:\ReactOS\system32\kernel32.dll@7c710000)

      --------------------------------------
      Side-note:
      Our netstat executed with 'netstat -abn' fails with

      "ERROR_NO_DATA: The pipe is being closed.."

      Fixing one of both would make me happy here, I would rename the tickets name in case the SideNote is easier to be fixed and gets fixed first.

      Attachments

        Activity

          People

            Heis Spiter Pierre Schweitzer
            reactosfanboy reactosfanboy
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: