[IPHLPAPI] Implement AllocateAndGetTcpExTable2FromStack()

CORE-14391